[tool.poetry]
name = "bandersnatch"
version = "0.1.0"
description = ""
authors = ["Tony Benoy <me@tonybenoy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tesseract2dict = "^1.3"
opencv-python = "^4.6.0.66 "
pdf2image = "^1.16.0"
Pillow = "^10.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
